Bug 422187 - Yakuake crashes on start up
Summary: Yakuake crashes on start up
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.5
Platform: Manjaro Linux
: NOR crash
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-28 15:41 UTC by Paul Brown
Modified: 2020-07-10 11:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Brown 2020-05-28 15:41:48 UTC
SUMMARY
Yakuake crashes on start up

STEPS TO REPRODUCE
1. Start Yakuake
2. 
3. 

OBSERVED RESULT

Starting Yakuake. Running from the command line I get:

KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = yakuake path = /usr/bin pid = 52054
KCrash: Arguments: /usr/bin/yakuake 
KCrash: Attempting to start /usr/lib/drkonqi

[1]+  Stopped                 /usr/bin/yakuake

Which I don't think is helpful.

The crash can be reproduced every time.


EXPECTED RESULT

Yakuake should start and not crash.


SOFTWARE/OS VERSIONS
Qt Version: 5.14.2
Frameworks Version: 5.70.0
Operating System: Linux 5.6.12-1-MANJARO x86_64
Windowing system: X11
Distribution: Manjaro Linux

ADDITIONAL INFORMATION

Dr Konqi says: "A useful backtrace could not be generated", but here is is anyway:

Application: Yakuake (yakuake), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fcc703d5300 (LWP 51892))]

Thread 7 (Thread 0x7fcc65151700 (LWP 51898)):
#0  0x00007fcc7376fcf5 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcc6749d65c in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007fcc6749ce08 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7fcc65952700 (LWP 51897)):
#0  0x00007fcc7376fcf5 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcc6749d65c in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007fcc6749ce08 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7fcc66153700 (LWP 51896)):
#0  0x00007fcc7376fcf5 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcc6749d65c in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007fcc6749ce08 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7fcc66954700 (LWP 51895)):
#0  0x00007fcc7376fcf5 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fcc6749d65c in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007fcc6749ce08 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fcc6e3b7700 (LWP 51894)):
#0  0x00007fcc7413a4fc in read () from /usr/lib/libc.so.6
#1  0x00007fcc72d388c0 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fcc72d87d01 in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#3  0x00007fcc72d89448 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007fcc72d89571 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0x00007fcc746f68ac in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#6  0x00007fcc7469d05c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#7  0x00007fcc744c1c62 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#8  0x00007fcc75695b28 in ?? () from /usr/lib/libQt5DBus.so.5
#9  0x00007fcc744c2dd6 in ?? () from /usr/lib/libQt5Core.so.5
#10 0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#11 0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fcc6fb70700 (LWP 51893)):
#0  0x00007fcc7413eabf in poll () from /usr/lib/libc.so.6
#1  0x00007fcc73c5763b in ?? () from /usr/lib/libxcb.so.1
#2  0x00007fcc73c5937b in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007fcc6fd02e01 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007fcc744c2dd6 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007fcc7376946f in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007fcc741493d3 in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fcc703d5300 (LWP 51892)):
[KCrash Handler]
#4  0x000055d77ddf068d in ?? ()
#5  0x000055d77ddede31 in ?? ()
#6  0x000055d77ddee52c in ?? ()
#7  0x000055d77ddee6ad in ?? ()
#8  0x000055d77ddeb311 in ?? ()
#9  0x000055d77ddd9ac8 in ?? ()
#10 0x000055d77ddcc7b5 in ?? ()
#11 0x00007fcc74071023 in __libc_start_main () from /usr/lib/libc.so.6
#12 0x000055d77ddcc87e in _start ()
[Inferior 1 (process 51892) detached]
Comment 1 Nicolas Fella 2020-06-27 10:22:46 UTC
https://invent.kde.org/utilities/yakuake/-/merge_requests/20 is a possible fix, but it's hard to tell whether it is the same issue due to the lack of proper backtrace
Comment 2 Paul Brown 2020-06-27 11:36:49 UTC
How can I provide you with a more helpful backtrace?
Comment 4 Paul Brown 2020-06-27 16:49:06 UTC
(In reply to Christoph Feck from comment #3)
> Please see
> https://community.kde.org/Guidelines_and_HOWTOs/Debugging/
> How_to_create_useful_crash_reports

Yeah, I already read that.

> Arch[edit]
>
> Arch currently doesn't offer debug packages with symbols (Feature Request). You therefore need to recompile all concerned packages with debugging symbols. See their informative document Getting Traces. 

Using Manjaro, but same problem. As this is way beyond  my skills, I guess I will not be using Yakuake any more :-(
Comment 5 Maximilian Schiller 2020-06-28 07:33:27 UTC
Does it happen after you changed something about you monitor setup?
Comment 6 Paul Brown 2020-06-28 08:50:12 UTC
(In reply to Maximilian Schiller from comment #5)
> Does it happen after you changed something about you monitor setup?

Thank you for your concern.

I have always had two monitors. As I don't change this set up ever, and Yakuake has worked until it stopped working completely, I'm going to have to say "no". 

I apologise for not being able to pinpoint when it stopped working and what the exact circumstances were, as I didn't use Yakuake every day. It used to always work, on both monitors, and then, one day, it stopped working and never worked again.

Yesterday I tried the snap version and it kind of worked in that it did not immediately crash. Instead, when pulled down, it showed the following message:

> Yakuake was unable to load the Konsole component.
> A Konsole installation is required to use Yakuake.

I am guessing this has to do with the fact that snaps run in virtual containers (?). As I was unable to find a similar error online, and konsole does not seem to be in the snap store, I am again stumped as how to get Yakuake working for me.
Comment 7 Maximilian Schiller 2020-06-28 18:13:09 UTC
(In reply to Paul Brown from comment #6)
Thank you for being this detailed in your bug report.

Did you try removing you yakuakerc (Should be under ~/.config/)? If not please try that (but keep a backup of it). 

The snap version probably doesn't contain Konsole but that's unfortunately something the snap packager did wrong.

The next step would be to either manually build yakuake with debug symbols or use a slightly modified version of the yakuake-git AUR package (since you are running Manjaro). If you need help with that I and others who can help are usually in the #yakuake:kde.org matrix channel.
Comment 8 Paul Brown 2020-06-29 07:17:52 UTC
(In reply to Maximilian Schiller from comment #7)
> (In reply to Paul Brown from comment #6)
> Thank you for being this detailed in your bug report.

Ah! No problem. I realise how difficult it must be to try and solve a problem with little information.

> Did you try removing you yakuakerc (Should be under ~/.config/)? If not
> please try that (but keep a backup of it). 

I have runa  find on .config/ and .local/ and I don't seem to have that file, so probably not that.

> The snap version probably doesn't contain Konsole but that's unfortunately
> something the snap packager did wrong.

Yes, that is what I thought.

> The next step would be to either manually build yakuake with debug symbols
> or use a slightly modified version of the yakuake-git AUR package (since you
> are running Manjaro). If you need help with that I and others who can help
> are usually in the #yakuake:kde.org matrix channel.

I have compiled stuff before, but not with debug symbols. I'll read up on how to do that and get back to you with how I get on.

Thanks!
Comment 9 Paul Brown 2020-06-29 07:35:12 UTC
I compiled the latest Git version from here: https://invent.kde.org/utilities/yakuake and used the -DCMAKE_BUILD_TYPE=Debug flag. Now Dr. Konqi says the following crash information is useful (Yay!):

Application: Yakuake (yakuake), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8c01e51cc0 (LWP 84597))]

Thread 11 (Thread 0x7f8bdeffd700 (LWP 84607)):
#0  0x00007f8c04de6158 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8c055cbce8 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt5Core.so.5
#2  0x00007f8c055c9fd4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f8bdf7fe700 (LWP 84606)):
#0  0x00007f8c04de6158 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8c055cbce8 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt5Core.so.5
#2  0x00007f8c055c9fd4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f8bdffff700 (LWP 84605)):
#0  0x00007f8c04de6158 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8c055cbce8 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt5Core.so.5
#2  0x00007f8c055c9fd4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f8becef6700 (LWP 84604)):
#0  0x00007f8c04de6158 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8c055cbce8 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /usr/lib/libQt5Core.so.5
#2  0x00007f8c055c9fd4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f8bedc02700 (LWP 84603)):
#0  0x00007f8c04de5e32 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8bf9684dec in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007f8bf9684cf8 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f8bee403700 (LWP 84602)):
#0  0x00007f8c04de5e32 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8bf9684dec in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007f8bf9684cf8 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f8beec04700 (LWP 84601)):
#0  0x00007f8c04de5e32 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8bf9684dec in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007f8bf9684cf8 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f8bf8e67700 (LWP 84600)):
#0  0x00007f8c04de5e32 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f8bf9684dec in ?? () from /usr/lib/dri/iris_dri.so
#2  0x00007f8bf9684cf8 in ?? () from /usr/lib/dri/iris_dri.so
#3  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f8bfbe76700 (LWP 84599)):
#0  0x00007f8c050e3aec in read () from /usr/lib/libc.so.6
#1  0x00007f8c03f92f2d in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#2  0x00007f8c03fe2edb in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f8c03f94221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f8c0580322c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f8c057a901c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#6  0x00007f8c055c4c32 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#7  0x00007f8c06808098 in ?? () from /usr/lib/libQt5DBus.so.5
#8  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f8c0161e700 (LWP 84598)):
#0  0x00007f8c050e805f in poll () from /usr/lib/libc.so.6
#1  0x00007f8c04f4263b in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f8c04f4437b in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f8c017a8c51 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f8c055c5e0f in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f8c04ddf422 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f8c050f2bf3 in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f8c01e51cc0 (LWP 84597)):
[KCrash Handler]
#4  Terminal::Terminal (this=0x55c86faaf940, workingDir=..., parent=0x7f8bfc006f10) at /home/paul/Downloads/KDE/yakuake/app/terminal.cpp:90
#5  0x000055c86ea09ff9 in Session::addTerminal (this=0x55c86faaf630, parent=0x7f8bfc006f10, workingDir=...) at /home/paul/Downloads/KDE/yakuake/app/session.cpp:165
#6  0x000055c86ea0991c in Session::setupSession (this=0x55c86faaf630, type=Session::Single) at /home/paul/Downloads/KDE/yakuake/app/session.cpp:58
#7  0x000055c86ea097b0 in Session::Session (this=0x55c86faaf630, workingDir=..., type=Session::Single, parent=0x55c86f6f2450) at /home/paul/Downloads/KDE/yakuake/app/session.cpp:42
#8  0x000055c86ea0594c in SessionStack::addSessionImpl (this=0x55c86f6f2450, type=Session::Single) at /home/paul/Downloads/KDE/yakuake/app/sessionstack.cpp:58
#9  0x000055c86ea05c9f in SessionStack::addSession (this=0x55c86f6f2450) at /home/paul/Downloads/KDE/yakuake/app/sessionstack.cpp:81
#10 0x000055c86e9e1828 in MainWindow::MainWindow (this=0x7fff92ff5030, parent=0x0) at /home/paul/Downloads/KDE/yakuake/app/mainwindow.cpp:146
#11 0x000055c86e9e09c4 in main (argc=1, argv=0x7fff92ff5258) at /home/paul/Downloads/KDE/yakuake/app/main.cpp:83
[Inferior 1 (process 84597) detached]
Comment 10 Maximilian Schiller 2020-06-29 18:58:38 UTC
(In reply to Paul Brown from comment #9)

Very helpful indeed. Based on the crash log I'm suspecting that something is wrong with your konsole installation.
It does find the konsole part/module correctly which is why you don't get the error message but the interface seems to be an outdated version. So either you are running some kind of partial upgrade on your system or you have installed konsole in some other place from which its loading the module with a higher priority than the default location.

The system uses qt plugins to load this in so definitely check that don't have a QT_PLUGIN_PATH environment variable defined and don't have some installation of konsole under other default search locations (/usr/local, .local, etc...). The file you need to look out for should be called konsolepart.so (The correct one should be the one under /usr/lib/qt/plugins).

I probably should add a more explanatory error message to yakuake if this turns out to be the issue.
Comment 11 Paul Brown 2020-06-29 19:25:06 UTC
(In reply to Maximilian Schiller from comment #10)
> (In reply to Paul Brown from comment #9)
> 
> Very helpful indeed. Based on the crash log I'm suspecting that something is
> wrong with your konsole installation.
> It does find the konsole part/module correctly which is why you don't get
> the error message but the interface seems to be an outdated version. So
> either you are running some kind of partial upgrade on your system or you
> have installed konsole in some other place from which its loading the module
> with a higher priority than the default location.
> 
> The system uses qt plugins to load this in so definitely check that don't
> have a QT_PLUGIN_PATH environment variable defined and don't have some
> installation of konsole under other default search locations (/usr/local,
> .local, etc...). The file you need to look out for should be called
> konsolepart.so (The correct one should be the one under /usr/lib/qt/plugins).
> 
> I probably should add a more explanatory error message to yakuake if this
> turns out to be the issue.


Yes! You did it! I checked and I had installed Konsole-git from AUR (probably because I needed some feature for a video or screenshot) and forgot. The version I installed was interfering with Yakuake. Now everything works.

Thanks!
Comment 12 Christoph Feck 2020-06-29 19:44:35 UTC
Thanks for the update; changing status.
Comment 13 Nicolas Fella 2020-07-10 11:24:16 UTC
Git commit 30ace243fb8f8f9a49df980a1e10e188727115cb by Nicolas Fella, on behalf of Maximilian Schiller.
Committed on 10/07/2020 at 11:24.
Pushed by nicolasfella into branch 'master'.

Show a warning notification if Konsole is outdated

Show a warning popup if yakuake detects that the konsolepart
didn't return a TerminalInterfaceV2. Which most likely happens if
konsole is outdated.

M  +5    -0    app/terminal.cpp

https://invent.kde.org/utilities/yakuake/commit/30ace243fb8f8f9a49df980a1e10e188727115cb