Show a warning notification if Konsole is outdated

Show a warning popup if yakuake detects that the konsolepart
didn't return a TerminalInterfaceV2. Which most likely happens if
konsole is outdated.

BUG: 422187